<resources>
    <string name="app_name">APPGRO</string>
    <string name="logo_de_la_image">Logo de la image</string>
    <string name="acceso">ACCESO</string>
    <string name="accede_a_tu_cuenta_para_continuar">ACCEDE A TU CUENTA PARA CONTINUAR</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="acceder">ACCEDER</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="O">Ó</string>
    <string name="reg_strate">Regístrate</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="por_favor_llene_todos_los_campos">Por favor llene todos los campos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio">Inicio</string>
    <string name="comunidad">Comunidad</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar_en_la_comunidad">Buscar en la comunidad</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="plagas_y_enfermedades">Plagas y \n Enfermedades</string>
    <string name="consejos_de_cultivos">Consejos de \n cultivos</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="tomar_una_foto">Tomar una foto</string>
    <string name="mira_el_diagn_stico">Mira el diagnóstico</string>
    <string name="obt_n_el_tratamiento">Obtén el \n tratamiento</string>
    <string name="fotos_anteriores">Fotos anteriores</string>
    <string name="subir_foto">Subir foto</string>
    <string name="_29">29°</string>
    <string name="managua_nicaragua">Managua - Nicaragua</string>
    <string name="buen_d_a_para_sembrar_tus_semillas">!Buen día para sembrar tus semillas!</string>
    <string name="soleado">Soleado</string>
    <string name="nueva_publicaci_n">Nueva publicación</string>
    <string name="todo">TODO</string>
    <string name="jackson_montenegro">Jackson Montenegro</string>
    <string name="hace_4_horas_nicaragua">Hace 4 horas - Nicaragua</string>
    <string name="relleno">¿Que opinan de la decoración que tengo en mi jardín? \n \n Tengo muchos tipos de plantas ornamentales y me gustaría saber cuales es tu favorita \n \n</string>
    <string name="_19_respuestas">19 Respuestas</string>
    <string name="_19">19</string>
    <string name="_3_2k">3.2k</string>
    <string name="francisco_garc_a">Francisco García</string>
    <string name="noel_rocha">Noel Rocha</string>
    <string name="no_se_ha_podido_iniciar_sesi_n_revise_su_correo_o_contrase_a">No se ha podido iniciar sesión - Revise su correo o contraseña</string>
    <string name="entendido">Entendido</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="editar">Editar</string>
    <string name="a_adir_imagen">Añadir imagen</string>
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="enviar">Enviar</string>
    <string name="idioma">Idioma</string>
    <string name="pa_s">País</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="escribir_respuesta">Escribir respuesta</string>
    <string name="_13">13</string>
    <string name="_1">1</string>
    <string name="sergio_duarte">Sergio Duarte</string>
    <string name="manchas_negras_en_las_hojas">MANCHAS NEGRAS EN LAS HOJAS</string>
    <string name="s_ntomas">Síntomas</string>
    <string name="relleno2">El piojo harinoso (Planococcus citri) es cosmopolita, teniendo
                            numerosas y variadas plantas hospedantes. El insecto causa daños
                            sobre todo en árboles frutales y cultivos ornamentales, así como en
                            plantas en maceta como ficus, palmera, schefflera, croton y kalanchoe;
                            también produce daños en rosa y gerbera.</string>
    <string name="relleno3">Esparce el material sobre bloques de lana de roca para una
                            introducción general o en cajas de aplicación (Diboxes)
                            cerca de un foco localizado o en el mismo.
                            Colócalo entre las hojas (infectadas).
                            Aplica el producto a última hora de la tarde.
                            Condiciones de manejo óptimo de Cryptobug-L</string>
    <string name="_22">22 %</string>
    <string name="relleno4">La temperatura mínima para un uso adecuado de Cryptobug. \n \n
es 16°C. Sin embargo, debido a que Cryptolaemus prefiere
temperaturas y humedad relativa elevadas, es más eficaz a
temperaturas entre 25°C y 28°C. Los escarabajos tienen
mayor movilidad que las larvas y por lo tanto resultan más
útiles para introducciones generales o en cultivos altos.
Recomendamos utilizar larvas para tratamientos
localizados cuando sea posible.</string>
    <string name="_34">34 %</string>
    <string name="cochinillas">COCHINILLAS</string>
    <string name="cochinillas_desc">Provocan la deformación y caída de hojas. También crean manchas blancas o marrones y decoloran la superficie</string>
    <string name="pulgones">PULGONES</string>
    <string name="desc_pulgones">Estos deforman las hojas y los brotes de las plantas. Para ello, clavan su pico y abseroben la sabia de las especies.</string>
    <string name="mosca_blanca">MOSCA BLANCA</string>
    <string name="desc_mosa">Este tipo de plaga es muy peligrosa tmabién, puesto que logra que las hojas pierdan color y las llenan de una sustancia pegajosa</string>
    <string name="gusanos">GUSANOS</string>
    <string name="desc_gusano">Para comprobar si los tienes en tu jardín, inspecciona con cuidado el suelo. Puedes escarvar con los dedos para descubrir alguno.</string>
    <string name="filtrar">Filtrar</string>
    <string name="_10_10_2021">10/10/2021</string>
    <string name="diagn_stico">Diagnóstico</string>
    <string name="soluci_n">Solución</string>
    <string name="aplicaci_n_de_cryptobug_l">Aplicación de Cryptobug-L</string>
    <string name="cryptobug">Esparce el material sobre bloques de lana de roca para una introducción general o en cajas de aplicación (Diboxes) cerca de un foco localizado o en el mismo. Colócalo entre las hojas (infectadas). Aplica el producto a última hora de la tarde. Condiciones de manejo óptimo de Cryptobug-L</string>
    <string name="comentar">Comentar</string>
    <string name="quieres_saber_donde_encontrar_estos_productos">¿Quieres saber donde encontrar estos productos?</string>
    <string name="title_activity_ubicacion_productos">UbicacionProductos</string>
</resources>