<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Registrar">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crea_una_cuenta"
                android:textSize="20sp"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_gravity="left"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/por_favor_llene_todos_los_campos"
                android:textSize="18sp"
                android:layout_gravity="left"
                android:padding="10dp"
                tools:ignore="RtlHardcoded" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#00000000"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="#00000000"
                app:errorTextColor="#FF0000"
                android:padding="10dp">
                <EditText android:id="@+id/editTextNombreRegister"
                    android:layout_width="match_parent"
                    android:hint="@string/nombre_completo"
                    android:inputType="textPersonName"
                    android:textColorHint="#000"
                    android:background="@drawable/box_shadow"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_outline_person_24"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#00000000"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="#00000000"
                app:errorTextColor="#FF0000"
                android:padding="10dp">
                <EditText android:id="@+id/editTextCorreoRegister"
                    android:layout_width="match_parent"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#000"
                    android:background="@drawable/box_shadow"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_outline_email_24"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#00000000"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="#00000000"
                app:errorTextColor="#FF0000"
                android:padding="10dp">
                <EditText android:id="@+id/editTextPassRegister"
                    android:layout_width="match_parent"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:textColorHint="#000"
                    android:background="@drawable/box_shadow"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_outline_lock_24"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#00000000"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="#00000000"
                app:errorTextColor="#FF0000"
                android:padding="10dp">
                <EditText android:id="@+id/editTextConfirmPassRegister"
                    android:layout_width="match_parent"
                    android:hint="@string/confirmar_contrase_a"
                    android:inputType="textPassword"
                    android:textColorHint="#000"
                    android:background="@drawable/box_shadow"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_outline_lock_24"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_personalizado"
                android:text="@string/registrarse"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textColor="@color/white"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="3">
                <TableRow android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_gravity="center">
                    <View
                        android:layout_width="130sp"
                        android:layout_height="1dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center_vertical"
                        android:background="#00288E"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/O"
                        android:textColor="#00288E"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="130sp"
                        android:layout_height="1dp"
                        android:layout_margin="15dp"
                        android:layout_gravity="center_vertical"
                        android:background="#00288E"/>
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_width="250dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="15dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/imgButtonFacebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="#00000000"
                        android:scaleType="fitStart"
                        android:layout_gravity="start"
                        android:src="@drawable/facebook" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/imgButtonGoogleRegister"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center_horizontal"
                        android:background="#00000000"
                        android:scaleType="fitStart"
                        android:src="@drawable/google" />
                </TableRow>
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
